Changelog
=========

1.4 (2014-04-22)
 * Update xmltramp to use new-style classes

1.3 (2013-11-7)
 Bugfix introduced in 1.2
 
1.2 (2013-10-25)
 * Don't use this version
 * Two bugfixes for supporting Python 2.7
 * Fix some dos encoding issues
 Thanks to: @lociii and @gabber7

1.01 (2013-04-10)
 * Fix MANIFEST.in for releasing to pypi

1.0 (2013-04-01)
 * Rename beatbox to pyforce
 * Support embedded dictionaries in python objects submitted to the python
   client
 * Rename writeStringElement method to writeElement for more accuracy in name

Beatbox forked as Pyforce
-------------------------

20.0 (2010-11-30)
-----------------

* Add 'encryptedstring' to the list of types marshalled as strings.  Thanks
  sobyone.
  [davisagli]

* Update to use version 20.0 of the Salesforce.com partner WSDL by default.
  [davisagli]

19.0 (2010-08-23)
-----------------

* Update marshalling of describeGlobal and describeSObjects responses to
  include new properties now returned by the API.  For backwards
  compatibility, we set the types property of the describeGlobal response
  to a list of the names of all types (which Salesforce now returns in
  separate DescribeGlobalSObjectResult objects).
  [davisagli]

* Update to use version 19.0 of the Salesforce.com partner WSDL by default.
  Also, use the new login.salesforce.com login endpoint by default.
  [davisagli]

16.1 (2010-03-11)
-----------------

* Catch and retry on exceptions from the socket library, in addition to ones
  from httplib.  This fixes a regression introduced in version 16.0.
  [davisagli]


16.0 (2009-11-12)
-----------------

* Don't strip newlines when marshalling the values of textarea fields.
  [davisagli]

* Make sure to add a field to fieldsToNull if its Python value is None.
  [rhettg, davisagli]

* Fix issue where numbers of type long weren't converted to a string.
  [spleeman, davisagli]

* Only catch HTTP exceptions when retrying a connection.
  [spleeman, davisagli]


16.0b1 (2009-09-08)