@@ -3,6 +3,8 @@ Changelog
 
 1.4 (2014-04-22)
  * Update xmltramp to use new-style classes
+ * Update serverUrl param to auth_server_url - more accurate representation
+   of how it is used.
 
 1.3 (2013-11-7)
  Bugfix introduced in 1.2
